# IvyHoopStatistics

./: DESIGN.md  README.md  app.py  helpers.py  ncaa.db  pyproject.toml  replit_zip_error_log.txt  requirements.txt
static/: styles.css
templates/: covid.html  following.html  home.html  layout.html  login.html  news.html  newsMain.html  register.html  roster.html  schedule.html  scheduleMain.html  standingsIvy.html  standingsMain.html  team.html  tickets.html
