[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
werkzeug = "^3.0.1"
cs50 = "^9.3.0"
flask = "^3.0.0"
flask-session = "^0.5.0"
pytz = "^2023.3.post1"
requests = "^2.31.0"
sportsreference = "^0.5.2"
pandas = "^2.1.3"
helpers = "^0.2.0"
bs4 = "^0.0.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"